fix styles for mobile; make emojis and hacka* network nowrap

--- a/src/index.css
+++ b/src/index.css
@@ -38,23 +38,23 @@
   }
 
   h1 {
-    @apply text-5xl;
+    @apply text-3xl md:text-5xl;
   }
 
   h2 {
-    @apply text-3xl;
+    @apply text-2xl md:text-3xl;
   }
 
   h3 {
-    @apply text-2xl;
+    @apply text-xl md:text-2xl;
   }
 
   h4 {
-    @apply text-xl;
+    @apply text-lg md:text-xl;
   }
 
   h5 {
-    @apply text-lg;
+    @apply text-base md:text-lg;
   }
 
   h6 {
@@ -62,7 +62,7 @@
   }
 
   p {
-    @apply text-lg mb-4;
+    @apply text-base md:text-lg mb-4;
   }
 
   a {
